@@ -1,3 +1,6 @@
+[B]Version 2.0.4[/B] 2017-02-20
+- Fix video url scraper
+
 [B]Version 2.0.3[/B] 2017-02-09
 - Fix addon after site reverted back to old url structure
 
